--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -16,6 +17,9 @@ body{
     background: var(--main-bg-color);
     color: var(--main-text-color);
     position: relative;
+}
+#logo-font{
+    font-family: 'Dancing Script', cursive;
 }
 
 .nav-items{
